--- a/app-vue3/index.html
+++ b/app-vue3/index.html
@@ -7,7 +7,7 @@
     <title>子应用 Vue3</title>
   </head>
   <body>
-    <div id="appVue3"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <div id="app3"></div>
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
